--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0"
   },
