:art: Creating lineup component and removing
- :fire: Removing particles.js and vertical menu component

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "quasar": "^1.0.0",
-    "vue-i18n": "^8.0.0",
-    "vue-particles": "^1.0.9"
+    "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
