--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.1",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.2",
+    "lodash-es": "^4.17.15",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "quasar": "^1.0.0",
