--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.19.2",
+    "color": "^3.1.2",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.2",
     "lodash-es": "^4.17.15",
