--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "Thiago Moreira <thiago.cmoreira@yahoo.com.br>",
   "private": true,
   "scripts": {
+    "predeploy": "yarn quasar build",
+    "deploy": "gh-pages -d dist/spa",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ./",
     "test": "echo \"No test specified\" && exit 0"
   },
@@ -34,7 +36,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.1.2"
+    "eslint-plugin-vue": "^6.1.2",
+    "gh-pages": "^3.1.0"
   },
   "engines": {
     "node": ">= 10.18.1",
