--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "quasar": "^1.0.0",
-    "vue-i18n": "^8.0.0"
+    "vue-i18n": "^8.0.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
