:wrench: Adding dotenv

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "color": "^3.1.2",
     "dom-to-image": "^2.6.0",
+    "dotenv": "^8.2.0",
     "file-saver": "^2.0.2",
     "lodash-es": "^4.17.15",
     "pug": "^2.0.4",
