:art: Minor update on nginx default conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,13 @@
 server {
   listen 80;
   listen 443 ssl;
-  server_name localhost;
+  # server_name localhost;
+  server_name myfestival-api.ml;
+
+  ssl_certificate /etc/letsencrypt/live/myfestival-api.ml/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/myfestival-api.ml/privkey.pem;
+  # ssl_dhparam /etc/ssl/certs/dhparam.pem;
+
 
   location / {
     root /usr/share/nginx/html;
