--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "axios": "^0.19.2",
+    "axios": ">=0.21.1",
     "color": "^3.1.2",
     "dom-to-image": "^2.6.0",
     "dotenv": "^8.2.0",
