--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^8.2.0",
     "file-saver": "^2.0.2",
     "lodash-es": "^4.17.15",
-    "pug": "^2.0.4",
+    "pug": ">=3.0.1",
     "pug-plain-loader": "^1.0.0",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0",
